fix: Improve color contrast for input borders

--- a/src/features/unified-share-modal/UnifiedShareModal.scss
+++ b/src/features/unified-share-modal/UnifiedShareModal.scss
@@ -226,7 +226,7 @@
 
     .bdl-PillSelectorDropdown .bdl-PillSelector {
         margin-top: 10px;
-        border: 1px solid $bdl-gray-20;
+        border: 1px solid $bdl-gray-50;
 
         .bdl-PillSelector-input::placeholder {
             color: $bdl-gray-62;
